# librzu

./: .gitignore  CMakeLists.txt  RappelzLib.pro  RappelzLib_global.h  main.cpp
shared-lib/: CMakeLists.txt
shared-lib/Common/: RappelzLib_global.h
shared-lib/Interfaces/: ICallbackGuard.h  IObject.h  ISocket.h  ISocketPool.h
shared-lib/Network/: CircularBuffer.h  ClassCounter.cpp  EncryptedSocket.cpp  EncryptedSocket.h  EventLoop.h  Object.h  RC4Cipher.cpp  RC4Cipher.h  RappelzSocket.cpp  RappelzSocket.h  Server.cpp  Server.h  Socket.cpp  Socket.h  SocketPoll.cpp  SocketPoll.h
shared-lib/Packets/: PacketBaseMessage.h  PacketEnums.h  TS_AC_SELECT_SERVER.h  TS_AC_SERVER_LIST.h  TS_AG_ITEM_SUPPLIED.h  TS_AG_KICK_CLIENT.h  TS_AG_SECURITY_NO_CHECK.h  TS_CS_VERSION.h  TS_GA_CLIENT_LOGIN.h  TS_GA_CLIENT_LOGOUT.h  TS_GA_LOGIN.h  TS_GA_SECURITY_NO_CHECK.h
src/: BanManager.cpp  BanManager.h  BufferReader.cpp  BufferReader.h  BufferWriter.cpp  BufferWriter.h  CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  ClassCounter.cpp  ClassCounter.h  ClientAuthSession.cpp  ClientAuthSession.h  ClientGameSession.cpp  ClientGameSession.h  ConfigInfo.cpp  ConfigInfo.h  ConfigParamVal.h  ConfigStatVal.h  ConfigValue.cpp  ConfigValue.h  CrashHandler.cpp  CrashHandler.h  DbConnection.cpp  DbConnection.h  DbConnectionPool.cpp  DbConnectionPool.h  DbPasswordCipher.h  DbQueryBinding.cpp  DbQueryBinding.h  DbQueryJob.cpp  DbQueryJob.h  DbQueryJobCallback.h  DbSelectJob.cpp  DbSelectJob.h  DelegatedPacketSession.cpp  DelegatedPacketSession.h  DesPasswordCipher.cpp  DesPasswordCipher.h  EncryptedSession.cpp  (+56 more)
src/Packets/: AuthPackets.h  Epics.h  PacketBaseMessage.h  PacketDeclaration.h  PacketEnums.h  PacketStructs.h  TS_AC_AES_KEY_IV.h  TS_AC_RESULT.h  TS_AC_RESULT_WITH_STRING.h  TS_AC_SELECT_SERVER.h  TS_AC_SERVER_LIST.h  TS_AC_UPDATE_PENDING_TIME.h  TS_AG_CLIENT_LOGIN.h  TS_AG_ITEM_PURCHASED.h  TS_AG_ITEM_SUPPLIED.h  TS_AG_KICK_CLIENT.h  TS_AG_LOGIN_RESULT.h  TS_AG_PCBANG_EXPIRE.h  TS_AG_PCBANG_EXPIRE_WARNING.h  TS_AG_SECURITY_NO_CHECK.h  TS_CA_ACCOUNT.h  TS_CA_DISTRIBUTION_INFO.h  TS_CA_IMBC_ACCOUNT.h  TS_CA_OPT_ACCOUNT.h  TS_CA_RSA_PUBLIC_KEY.h  TS_CA_SELECT_SERVER.h  TS_CA_SERVER_LIST.h  TS_CA_VERSION.h  TS_CS_ACCOUNT_WITH_AUTH.h  TS_CS_CHARACTER_LIST.h  TS_CS_CHAT_REQUEST.h  TS_CS_LOGIN.h  TS_CS_UPDATE.h  TS_CS_VERSION.h  TS_CU_LOGIN.h  TS_CU_UPLOAD.h  TS_GA_CLIENT_KICK_FAILED.h  TS_GA_CLIENT_LOGGED_LIST.h  TS_GA_CLIENT_LOGIN.h  TS_GA_CLIENT_LOGOUT.h  (+19 more)
src/Packets/Flat/: TS_AC_SERVER_LIST.h
src/Packets/Structure/: PacketDeclaration.h  TS_AC_SERVER_LIST_EX.h  TS_AC_SERVER_LIST_EX2.h  TS_SC_SKILL.h
src/lib/: ClassCounter.cpp  ClassCounter.h  ClientAuthSession.cpp  ClientAuthSession.h  ConfigInfo.cpp  ConfigStatVal.h  DbConnection.cpp  DbConnectionPool.cpp  DbQueryBinding.cpp  DbQueryBinding.h  DbQueryJob.h  DbQueryJobCallback.h  DelegatedPacketSession.cpp  DelegatedPacketSession.h  EventLoop.cpp  Extern.h  GlobalCoreConfig.h  IDelegate.h  IListener.h  LibGlobal.h  LibRzuInit.cpp  LibRzuInit.h  Log.cpp  Object.cpp  PacketBaseMessage.h  PacketDeclaration.h  PacketSession.cpp  PacketSession.h  RC4Cipher.cpp  RC4Cipher.h  SessionServer.cpp  StartableObject.h  TelnetSession.cpp  Utils.cpp  ZlibCipher.h
src/lib/Cipher/: AesPasswordCipher.cpp  AesPasswordCipher.h  DbPasswordCipher.cpp  DbPasswordCipher.h  DesPasswordCipher.cpp  DesPasswordCipher.h  RC4Cipher.cpp  RC4Cipher.h  RsaCipher.cpp  RsaCipher.h  RzHashReversible256.cpp  RzHashReversible256.h  ZlibCipher.cpp  ZlibCipher.h
src/lib/Config/: ConfigInfo.cpp  ConfigInfo.h  ConfigParamVal.h  ConfigStatVal.h  ConfigValue.cpp  ConfigValue.h  GlobalCoreConfig.cpp  GlobalCoreConfig.h
src/lib/Console/: ConsoleCommands.cpp  ConsoleCommands.h  ConsoleSession.cpp  ConsoleSession.h  IWritableConsole.h
src/lib/Core/: BackgroundWork.h  CharsetConverter.cpp  CharsetConverter.h  CrashHandler.cpp  CrashHandler.h  EventChain.h  EventLoop.cpp  EventLoop.h  IDelegate.h  IListener.h  Log.cpp  Log.h  Object.cpp  Object.h  PrintfFormats.h  ScopeGuard.h  ThreadWork.cpp  ThreadWork.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h  UvHandle.cpp  UvHandle.h
src/lib/Database/: DbBindingLoader.cpp  DbBindingLoader.h  DbConnection.cpp  DbConnection.h  DbConnectionPool.cpp  DbConnectionPool.h  DbQueryBinding.cpp  DbQueryBinding.h  DbQueryJob.cpp  DbQueryJob.h  DbQueryJob.inl  DbQueryJobCallback.cpp  DbQueryJobCallback.h  DbQueryJobCallback.inl  DbQueryJobCallback_impl.h  DbQueryJobLambda.h  DbQueryJobRef.cpp  DbQueryJobRef.h  DbQueryJob_impl.h  DbString.h  DbTypeHelpers.cpp  DbTypeHelpers.h  IDbQueryJob.h  IDbQueryJobCallback.h
src/lib/NetSession/: AutoClientSession.cpp  AutoClientSession.h  BanManager.cpp  BanManager.h  ClientAuthSession.cpp  ClientAuthSession.h  ClientGameSession.cpp  ClientGameSession.h  DelegatedPacketSession.cpp  DelegatedPacketSession.h  EncryptedSession.cpp  EncryptedSession.h  PacketSession.cpp  PacketSession.h  ServersManager.cpp  ServersManager.h  SessionServer.cpp  SessionServer.h  SocketSession.cpp  SocketSession.h  StartableObject.cpp  StartableObject.h  TelnetSession.cpp  TelnetSession.h
src/lib/Packet/: EncodedInt.h  EncodingRandomized.h  EncodingScrambled.h  GameTypes.h  JSONWriter.h  MessageBuffer.cpp  MessageBuffer.h  PacketBaseMessage.h  PacketDeclaration.h  PacketEpics.h  PacketIterator.h  PacketStructsName.cpp  PacketStructsName.h  StructSerializer.h
src/lib/Stream/: Pipe.cpp  Pipe.h  Socket.cpp  Socket.h  Stream.cpp  Stream.h  StreamAddress.cpp  StreamAddress.h
src/packet_preprocessing_targets/: CMakeLists.txt
src/packets/: .clang-format  PacketEnums.h  PacketEpics.h  PacketIterator.h.in  README.md
src/packets/AuthClient/: TS_AC_ACCOUNT_NAME.h  TS_AC_AES_KEY_IV.h  TS_AC_RESULT.h  TS_AC_RESULT_WITH_STRING.h  TS_CA_ACCOUNT.h  (+11 more)
src/private/: RappelzLibConfig.cpp  RappelzLibConfig.h
test/: CMakeLists.txt  CipherTest.cpp  JSONWriter.cpp  JsonWriterTest.cpp  PacketDeclarationTest.cpp  PacketIteratorTest.cpp  PerfTest.cpp  main.cpp  test_cipher.cpp  test_perf.cpp
test/packets/: CMakeLists.txt  PacketDeclaration.cpp  main.cpp
(+374 files in other folders)
